[tool.poetry]
name = "coriolis"
version = "0.1.0"
description = "Small event ticketing and management tool"
license = "AGPL-3.0-or-later"
authors = ["Ryszard Knop <rk@dragonic.eu>"]
repository = "https://github.com/DragoonAethis/Coriolis"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Beta",
    "Programming Language :: Python :: 3",
    "Environment :: Web Environment",
    "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.14.9"
sentry-sdk = "^2.48.0"
Django = "^4.2.27"
django-upgrade = "^1.29.1"
django-allauth = { extras = ["mfa", "openid", "socialaccount"], version = "^64.2.1" }
django-allauth-2fa = "^0.11.1"
fido2 = "1.2.0"  # Locked due to an older allauth version, to be removed after allauth 65.8.1
django-environ = "^0.12.0"
django-debug-toolbar = "^6.1.0"
django-phonenumber-field = { extras = ["phonenumberslite"], version = "^8.4.0" }
django-colorfield = "^0.14.0"
django-crispy-forms = "^2.5"
crispy-bootstrap5 = "^2025.6"
gunicorn = "^23.0.0"
whitenoise = { extras = ["brotli"], version = "^6.11.0" }
requests = "^2.32.5"
psycopg = { extras = ["binary", "pool"], version = "^3.3.2" }
pillow = "^12.0.0"
pyrage = "^1.3.0"
Markdown = "^3.10"
django-payments = "^3.1.0"
django-money = "^3.5.4"
django-hijack = "^3.7.4"
pydantic = "^2.12.5"
XlsxWriter = "^3.2.9"
django-ipware = "^7.0.1"
dramatiq = { extras = ["watch", "redis"], version = "^1.18.0" }
django-dramatiq = "^0.14.0"
django-dramatiq-email = "^1.4.3"
dramatiq-crontab = { extras = ["redis", "sentry"], version = "^1.0.12" }
django-storages = "^1.14.6"
django-lifecycle = "^1.2.4"
pyinstrument = "^5.1.1"

# Vendored due to project-specific hacks and fixes:
#django-payments-przelewy24 = { git = "https://github.com/ar4s/django-payments-przelewy24" }
joserfc = "^1.3.4"


[tool.ruff]
target-version = "py312"

line-length = 120
extend-exclude = ["events/migrations/*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "C4", "T10", "DJ", "UP", "S"]  # TODO: Bandit (S)

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
