[project]
name = "coriolis"
version = "0.1.0"
description = "Small event ticketing and management tool"
authors = [{ name = "Ryszard Knop", email = "rk@dragonic.eu" }]
requires-python = ">=3.14,<4"
readme = "README.md"
license = "AGPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Beta",
    "Programming Language :: Python :: 3",
    "Environment :: Web Environment",
    "Framework :: Django",
]
dependencies = [
    "ruff>=0.14.11,<0.15",
    "sentry-sdk>=2.49.0,<3",
    "Django>=5.2.10,<6",
    "django-upgrade>=1.29.1,<2",
    "django-allauth[mfa, openid, socialaccount]>=64.2.1,<65",
    "joserfc>=1.3.4,<2",
    "django-environ>=0.12.0,<0.13",
    "django-debug-toolbar>=6.1.0,<7",
    "django-phonenumber-field[phonenumberslite]>=8.4.0,<9",
    "django-colorfield>=0.14.0,<0.15",
    "django-crispy-forms>=2.5,<3",
    "crispy-bootstrap5>=2025.6,<2026",
    "gunicorn>=23.0.0,<24",
    "whitenoise[brotli]>=6.11.0,<7",
    "requests>=2.32.5,<3",
    "psycopg[binary, pool]>=3.3.2,<4",
    "pillow>=12.1.0,<13",
    "pyrage>=1.3.0,<2",
    "Markdown>=3.10,<4",
    "django-payments>=3.1.0,<4",
    "django-money>=3.5.4,<4",
    "django-hijack>=3.7.6,<4",
    "pydantic>=2.12.5,<3",
    "XlsxWriter>=3.2.9,<4",
    "django-ipware>=7.0.1,<8",
    "dramatiq[watch, redis]>=1.18.0,<2",
    "django-dramatiq>=0.15.0,<0.16",
    "django-dramatiq-email>=1.4.3,<2",
    "dramatiq-crontab[redis, sentry]>=1.0.12,<2",
    "django-storages>=1.14.6,<2",
    "django-lifecycle>=1.2.4,<2",
    "pyinstrument>=5.1.2,<6",
    "fido2==1.2.0",  # Locked due to an older allauth version, to be removed after allauth 65.8.1
]

# Vendored due to project-specific hacks and fixes
#django-payments-przelewy24 = { git = "https://github.com/ar4s/django-payments-przelewy24" }

[project.urls]
Repository = "https://github.com/DragoonAethis/Coriolis"


[tool.ruff]
target-version = "py312"

line-length = 120
extend-exclude = ["events/migrations/*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "C4", "T10", "DJ", "UP", "S"]  # TODO: Bandit (S)

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"**/{tests,docs,tools}/*" = ["E402"]
